# watchdoge

./: .gitignore  Makefile  README.md  coincoin.ipynb  docker-compose.yml
api/: Dockerfile  Makefile  Pipfile  config.py  data.py  docker-entrypoint.sh  exchange_puller.py  pyproject.toml
api/api/: __init__.py  app.py  database.py  schemas.py  sql_app.db
api/api/clients/: binance_client.py
api/api/endpoints/: wallet.py
api/api/fetchers/: binance_v2_fetcher.py
api/api/helpers/: base.py  seeder.py  symbol_helper.py  trade_downloader.py
api/api/models/: __init__.py  asset.py  asset_daily_snapshot.py  balance.py  base.py  daily_balance.py  items.py  models.py  symbol.py  ticker.py  trade.py  user.py
api/api/sandbox/: dal.py
api/api/sandbox/fetchers/: base_fetcher.py  binance_fetcher.py  binance_v2_fetcher.py  get_historical_klines.py  kraken_fetcher.py  websocket.py
api/api/sandbox/websocket/: main.py
api/api/schemas/: __init__.py  asset.py  balance.py  item.py  symbol.py  trade.py  user.py
api/api/seeds/: example.yml
api/api/tests/binance_rest/: account.py
api/api/tests/clients/: binance_client_test.py
api/api/tests/helpers/: symbol_helper_test.py
api/api/tests/python_binance/: account.py
api/api/workers/: account_worker.py  market_worker.py  wallet_worker.py
api/scripts/: build.sh  run.sh  run_dd.sh
feeder/: pyproject.toml
feeder/feeder/: conf.py  dal.py  main.py
feeder/feeder/fetchers/: kraken_fetcher.py
front/: Dockerfile  README.md  package.json
front/public/: index.html
front/src/: index.tsx
old/: docker-compose.yml
old/api/: Pipfile  data.py  exchange_puller.py  server.py  websocket.py
tick/: docker-compose.yml
wallet/: README.rst  pyproject.toml
wallet/tests/: test_wallet.py
wallet/wallet/: app.py
web/: package.json  pyproject.toml
web/public/: index.html
web/templates/: index.htm
web/web/: main.py
(+3 files in other folders)
