[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Nicolas Landier <nicolas.landier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.13.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
